# opencl_tutorial

./: .gitignore
Tutorial_1/: CMakeLists.txt  conanfile.txt
Tutorial_1/include/: main.hpp
Tutorial_1/src/: main.cpp
